--- a/portfolio.css
+++ b/portfolio.css
@@ -178,6 +178,24 @@ body {
   margin: none;
 }
 
+.base {
+  color: inherit;
+  text-decoration: none;
+}
+
+.resume {
+  border-radius: 10px;
+  background-color: inherit;
+  box-shadow: 0 0 20px #000;
+  width: 50%;
+  transform: translate(50%, 0%);
+  padding-bottom: 3px;
+}
+
+.resume:hover {
+  color: #663399;
+}
+
 .item {
   margin: none;
   border: 1px solid white;
