--- a/portfolio.sass
+++ b/portfolio.sass
@@ -159,6 +159,21 @@ body
     border-radius: 20px
     margin: none
 
+.base
+    color: inherit
+    text-decoration: none
+    
+.resume
+    border-radius: 10px
+    background-color:  inherit
+    box-shadow: 0 0 20px #000
+    width: 50%
+    transform: translate(50%, 0%)
+    padding-bottom: 3px
+
+.resume:hover
+    color: #663399
+
 .item
     margin: none
     border: 1px solid white
