resume and some styling

--- a/portfolio.sass
+++ b/portfolio.sass
@@ -164,6 +164,7 @@ body
     text-decoration: none
     
 .resume
+    color: inherit
     border-radius: 10px
     background-color:  inherit
     box-shadow: 0 0 20px #000
